RRF-47: superset theme

--- a/superset-frontend/src/assets/stylesheets/less/variables.less
+++ b/superset-frontend/src/assets/stylesheets/less/variables.less
@@ -24,40 +24,40 @@
 /* component styles. This will allow us to more easily adjust theming   */
 /************************************************************************/
 
-@primary-color: #20a7c9;
+@primary-color: #2CBA8F;
 @indicator-color: @primary-color;
 
-@brand-primary-dark1: #1a85a0;
-@brand-primary-dark2: #156378;
-@brand-primary-light1: #79cade;
-@brand-primary-light2: #a5dae9;
-@brand-primary-light3: #d2edf4;
-@brand-primary-light4: #e9f6f9;
-@brand-primary-light5: #f3f8fa;
+@brand-primary-dark1: #21AB7C;
+@brand-primary-dark2: #109460;
+@brand-primary-light1: #4CC4A0;
+@brand-primary-light2: #6BCFB1;
+@brand-primary-light3: #96DDC7;
+@brand-primary-light4: #cde4dd;
+@brand-primary-light5: #E6F7F2;
 
-@brand-secondary: #444e7c;
-@brand-secondary-dark1: #363e63;
-@brand-secondary-dark2: #282e4a;
-@brand-secondary-dark3: #1b1f31;
-@brand-secondary-light1: #8e94b0;
-@brand-secondary-light2: #b4b8ca;
-@brand-secondary-light3: #d9dbe4;
-@brand-secondary-light4: #eceef2;
-@brand-secondary-light5: #f5f5f8;
+@brand-secondary: #0F60E0;
+@brand-secondary-dark1: #003281;
+@brand-secondary-dark2: #001f50;
+@brand-secondary-dark3: #001435;
+@brand-secondary-light1: #4AA0F0;
+@brand-secondary-light2: #6AB1F2;
+@brand-secondary-light3: #95C7F6;
+@brand-secondary-light4: #BFDDFA;
+@brand-secondary-light5: #E5F2FD;
 
 @almost-black: #263238;
 @gray-dark: #484848;
 @gray-light: #e0e0e0;
 @gray-light5: #666666;
 @gray: #879399;
-@gray-bg: #f7f7f7;
+@gray-bg: #D3D3D3;
 @gray-heading: #a3a3a3;
 @menu-hover: #f2f3f5;
 @lightest: #ffffff;
 @darkest: #000000;
 
 /**************************** text-specific *****************************/
-@link: #1985a0;
+@link: #109460;
 @link-hover: darken(@link, @colorstop-one);
 
 /***************************** status colors ****************************/
@@ -67,9 +67,9 @@
 @info-light1: #b3defe;
 @info-light2: #eff8fe;
 
-@danger: #e04355;
-@danger-dark1: #a7323f;
-@danger-dark2: #6f212a;
+@danger: #df4b4b;
+@danger-dark1: #b10000;
+@danger-dark2: #660909;
 @danger-light1: #efa1aa;
 @danger-light2: #faedee;
 
@@ -180,7 +180,7 @@
 }
 
 // ****************************** Families ******************************
-@font-family-sans-serif: 'Inter', Helvetica, Arial;
+@font-family-sans-serif: 'Poppins', Helvetica, Arial;
 @font-family-serif: Georgia, 'Times New Roman', Times, serif;
 @font-family-monospace: 'Fira Code', 'Courier New', monospace;
 @font-family-base: @font-family-sans-serif;
