--- a/docs/src/styles/antd-theme.less
+++ b/docs/src/styles/antd-theme.less
@@ -16,7 +16,7 @@
  * specific language governing permissions and limitations
  * under the License.
  */
-@primary-color: #20a7c9;
+@primary-color: #2CBA8F;
 @info-color: #66bcfe;
 @success-color: #59c189;
 @processing-color: #66bcfe;
