--- a/superset-frontend/src/assets/stylesheets/less/fonts.less
+++ b/superset-frontend/src/assets/stylesheets/less/fonts.less
@@ -31,3 +31,14 @@
 @import '~fontsource-fira-code/400.css';
 @import '~fontsource-fira-code/500.css';
 @import '~fontsource-fira-code/600.css';
+
+/******************************* Poppins ********************************/
+@import '~@fontsource/poppins/100.css';
+@import '~@fontsource/poppins/200.css';
+@import '~@fontsource/poppins/300.css';
+@import '~@fontsource/poppins/400.css';
+@import '~@fontsource/poppins/500.css';
+@import '~@fontsource/poppins/600.css';
+@import '~@fontsource/poppins/700.css';
+@import '~@fontsource/poppins/800.css';
+@import '~@fontsource/poppins/900.css';
